--- a/libs/client-web-app/browse/ui/book-details/project.json
+++ b/libs/client-web-app/browse/ui/book-details/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "client-web-app/browse/ui/filters",
+  "name": "book-details",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/client-web-app/browse/ui/filters/src",
+  "sourceRoot": "libs/client-web-app/browse/ui/book-details/src",
   "prefix": "lib",
   "projectType": "library",
   "tags": ["scope:client-web-app", "type:ui"],
@@ -10,7 +10,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/client-web-app/browse/ui/filters/jest.config.ts"
+        "jestConfig": "libs/client-web-app/browse/ui/book-details/jest.config.ts"
       }
     },
     "lint": {
