--- a/apps/client-web-app/project.json
+++ b/apps/client-web-app/project.json
@@ -20,9 +20,18 @@
           "apps/client-web-app/src/assets"
         ],
         "styles": [
-          "node_modules/primeng/resources/themes/md-dark-indigo/theme.css",
           "node_modules/primeng/resources/primeng.min.css",
-          "apps/client-web-app/src/styles.scss"
+          "apps/client-web-app/src/styles.scss",
+          {
+            "input": "node_modules/primeng/resources/themes/md-dark-indigo/theme.css",
+            "bundleName": "md-dark-indigo",
+            "inject": false
+          },
+          {
+            "input": "node_modules/primeng/resources/themes/md-light-indigo/theme.css",
+            "bundleName": "md-light-indigo",
+            "inject": false
+          }
         ],
         "scripts": []
       },
