--- a/apps/client-web-app/project.json
+++ b/apps/client-web-app/project.json
@@ -28,13 +28,13 @@
           "node_modules/primeng/resources/primeng.min.css",
           "apps/client-web-app/src/styles.scss",
           {
-            "input": "apps/client-web-app/src/assets/themes/aura-dark-blue/theme.css",
-            "bundleName": "aura-dark-blue",
+            "input": "apps/client-web-app/src/assets/themes/mdc-light-indigo.scss",
+            "bundleName": "mdc-light-indigo",
             "inject": false
           },
           {
-            "input": "apps/client-web-app/src/assets/themes/aura-light-blue/theme.css",
-            "bundleName": "aura-light-blue",
+            "input": "apps/client-web-app/src/assets/themes/mdc-dark-indigo.scss",
+            "bundleName": "mdc-dark-indigo",
             "inject": false
           }
         ],
