--- a/libs/client-web-app/shared/data-access/api-types/project.json
+++ b/libs/client-web-app/shared/data-access/api-types/project.json
@@ -1,6 +1,6 @@
 {
   "name": "client-web-app-shared-api-types",
-  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
+  "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/client-web-app/shared/api-types/src",
   "prefix": "e-commerce",
   "tags": ["scope:client-web-app", "type:shared-data-access"],
