--- a/libs/client-web-app/shared/data-access/guards/.eslintrc.json
+++ b/libs/client-web-app/shared/data-access/guards/.eslintrc.json
@@ -1,15 +1,19 @@
 {
-  "extends": ["../../../.eslintrc.json"],
+  "extends": ["../../../../../.eslintrc.json"],
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
       "files": ["*.ts"],
+      "extends": [
+        "plugin:@nx/angular",
+        "plugin:@angular-eslint/template/process-inline-templates"
+      ],
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
           {
             "type": "attribute",
-            "prefix": "eCommerce",
+            "prefix": "lib",
             "style": "camelCase"
           }
         ],
@@ -17,15 +21,11 @@
           "error",
           {
             "type": "element",
-            "prefix": "e-commerce",
+            "prefix": "lib",
             "style": "kebab-case"
           }
         ]
-      },
-      "extends": [
-        "plugin:@nx/angular",
-        "plugin:@angular-eslint/template/process-inline-templates"
-      ]
+      }
     },
     {
       "files": ["*.html"],
