--- a/libs/client-web-app/shared/data-access/stores/project.json
+++ b/libs/client-web-app/shared/data-access/stores/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "client-web-app/shared/data-access/cart",
+  "name": "stores",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/client-web-app/shared/data-access/cart/src",
+  "sourceRoot": "libs/client-web-app/shared/data-access/stores/src",
   "prefix": "lib",
   "projectType": "library",
   "tags": ["scope:client-web-app", "type:shared-data-access"],
@@ -10,7 +10,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/client-web-app/shared/data-access/cart/jest.config.ts"
+        "jestConfig": "libs/client-web-app/shared/data-access/stores/jest.config.ts"
       }
     },
     "lint": {
