--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@e-commerce/admin-dashboard/auth/api": [
+        "libs/admin-dashboard/auth/api/src/index.ts"
+      ],
       "@e-commerce/admin-dashboard/auth/data-access": [
         "libs/admin-dashboard/auth/data-access/src/index.ts"
       ],
@@ -39,8 +42,14 @@
       "@e-commerce/admin-dashboard/core/domain": [
         "libs/admin-dashboard/core/domain/src/index.ts"
       ],
+      "@e-commerce/client-web/account/api": [
+        "libs/client-web/account/api/src/index.ts"
+      ],
       "@e-commerce/client-web/account/data-access": [
         "libs/client-web/account/data-access/src/index.ts"
+      ],
+      "@e-commerce/client-web/account/feature/favourite-books-list": [
+        "libs/client-web/account/feature/favourite-books-list/src/index.ts"
       ],
       "@e-commerce/client-web/account/feature/information": [
         "libs/client-web/account/feature/information/src/index.ts"
@@ -156,10 +165,7 @@
       "@e-commerce/client-web/shared/utils": [
         "libs/client-web/shared/utils/src/index.ts"
       ],
-      "@e-commerce/shared/api-models": ["libs/shared/api-models/src/index.ts"],
-      "@e-commerce/admin-dashboard/auth/api": [
-        "libs/admin-dashboard/auth/api/src/index.ts"
-      ]
+      "@e-commerce/shared/api-models": ["libs/shared/api-models/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
