--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bcrypt": "^5.1.1",
     "caniuse-lite": "^1.0.30001699",
     "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "eslint-plugin-deprecation": "^3.0.0",
