--- a/package.json
+++ b/package.json
@@ -8,25 +8,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~19.0.5",
-    "@angular/cdk": "^19.0.4",
-    "@angular/common": "~19.0.5",
-    "@angular/compiler": "~19.0.5",
-    "@angular/core": "~19.0.5",
-    "@angular/forms": "~19.0.5",
-    "@angular/platform-browser": "~19.0.5",
-    "@angular/platform-browser-dynamic": "~19.0.5",
-    "@angular/platform-server": "~19.0.5",
-    "@angular/router": "~19.0.5",
-    "@angular/service-worker": "~19.0.5",
-    "@angular/ssr": "~19.0.6",
+    "@angular/animations": "~19.0.7",
+    "@angular/cdk": "^19.1.4",
+    "@angular/common": "~19.0.7",
+    "@angular/compiler": "~19.0.7",
+    "@angular/core": "~19.0.7",
+    "@angular/forms": "~19.0.7",
+    "@angular/platform-browser": "~19.0.7",
+    "@angular/platform-browser-dynamic": "~19.0.7",
+    "@angular/platform-server": "~19.0.7",
+    "@angular/router": "~19.0.7",
+    "@angular/service-worker": "~19.0.7",
+    "@angular/ssr": "~19.0.7",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.15",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.15",
-    "@nestjs/swagger": "^8.1.0",
+    "@nestjs/swagger": "^8.1.1",
     "@ngrx/effects": "19.0.0",
     "@ngrx/eslint-plugin": "19.0.0",
     "@ngrx/operators": "19.0.0",
@@ -37,16 +37,16 @@
     "@primeng/themes": "19.0.0",
     "@primevue/forms": "^4.2.5",
     "@primevue/themes": "^4.2.5",
-    "@prisma/client": "^6.1.0",
-    "@supabase/supabase-js": "^2.47.10",
+    "@prisma/client": "^6.4.0",
+    "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/container-queries": "^0.1.1",
-    "@tanstack/vue-query": "^5.62.8",
+    "@tanstack/vue-query": "^5.66.4",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash-es": "^4.17.12",
     "@types/passport-local": "^1.0.38",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
-    "caniuse-lite": "^1.0.30001699",
+    "caniuse-lite": "^1.0.30001700",
     "chart.js": "^4.4.7",
     "chartjs-plugin-datalabels": "^2.2.0",
     "class-transformer": "^0.5.1",
@@ -59,9 +59,9 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pinia": "^2.3.0",
+    "pinia": "^2.3.1",
     "primeicons": "^7.0.0",
-    "primeng": "19.0.0",
+    "primeng": "^19.0.6",
     "primevue": "^4.2.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "~7.8.1",
@@ -71,20 +71,20 @@
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0",
-    "zod": "^3.24.1",
+    "zod": "^3.24.2",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.0.6",
-    "@angular-devkit/core": "~19.0.6",
-    "@angular-devkit/schematics": "~19.0.6",
+    "@angular-devkit/build-angular": "~19.0.7",
+    "@angular-devkit/core": "~19.0.7",
+    "@angular-devkit/schematics": "~19.0.7",
     "@angular-eslint/eslint-plugin": "19.0.2",
     "@angular-eslint/eslint-plugin-template": "19.0.2",
     "@angular-eslint/template-parser": "19.0.2",
-    "@angular/cli": "~19.0.6",
-    "@angular/compiler-cli": "~19.0.5",
-    "@angular/language-service": "~19.0.5",
-    "@angular/pwa": "^19.0.6",
+    "@angular/cli": "~19.0.7",
+    "@angular/compiler-cli": "~19.0.7",
+    "@angular/language-service": "~19.0.7",
+    "@angular/pwa": "^19.1.7",
     "@eslint/eslintrc": "^2.1.4",
     "@eslint/js": "~8.57.1",
     "@nestjs-modules/mailer": "^2.0.2",
@@ -102,26 +102,28 @@
     "@nx/web": "20.3.0",
     "@nx/webpack": "20.3.0",
     "@nx/workspace": "20.3.0",
-    "@schematics/angular": "~19.0.6",
+    "@schematics/angular": "~19.0.7",
     "@swc-node/register": "~1.10.9",
-    "@swc/core": "~1.10.1",
+    "@swc/core": "~1.10.18",
     "@swc/helpers": "~0.5.15",
     "@types/express": "5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "22.10.1",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
-    "@typescript-eslint/utils": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
+    "@typescript-eslint/utils": "^8.24.1",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vitest/coverage-v8": "^2.1.8",
-    "@vitest/ui": "^2.1.8",
+    "@vitest/coverage-v8": "^2.1.9",
+    "@vitest/ui": "^2.1.9",
     "@vue/eslint-config-prettier": "10.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.6",
-    "angular-eslint": "^19.0.2",
+    "angular-eslint": "^19.1.0",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.17.0",
-    "electron": "^33.2.1",
+    "electron": "^33.4.1",
     "electron-builder": "^25.1.8",
     "eslint": "~9.16.0",
     "eslint-config-prettier": "^9.1.0",
@@ -133,21 +135,21 @@
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "14.4.2",
     "jsdom": "~25.0.1",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^6.10.0",
     "nx": "20.3.0",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.2",
-    "prisma": "^6.1.0",
+    "postcss": "^8.5.2",
+    "prettier": "^3.5.1",
+    "prisma": "^6.4.0",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.6.3",
-    "typescript-eslint": "^8.18.1",
-    "vite": "^6.0.4",
+    "typescript-eslint": "^8.24.1",
+    "vite": "^6.1.0",
     "vite-plugin-dts": "~4.3.0",
     "vite-plugin-electron-renderer": "^0.14.6",
-    "vitest": "^2.1.8",
-    "vue-tsc": "^2.1.10",
+    "vitest": "^2.1.9",
+    "vue-tsc": "^2.2.2",
     "webpack-cli": "^5.1.4"
   },
   "trustedDependencies": [
